kubectl/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      labels:
        components: backend
    spec: 
      imagePullSecrets:
        - name: ecr-regcred
      containers:
        - name: chatserver
          image: 339924580365.dkr.ecr.ap-southeast-2.amazonaws.com/chatserver:v0.0.0-3966a10
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "150m"
